2004-03-06  Alexey Shchepin  <alexey@sevcom.net>

	* src/web/: Support for HTTP Polling (JEP-0025) (almost complete)

2004-03-04  Alexey Shchepin  <alexey@sevcom.net>

	* src/web/: Updated

2004-03-03  Alexey Shchepin  <alexey@sevcom.net>

	* src/web/: Minor update

2004-03-02  Alexey Shchepin  <alexey@sevcom.net>

	* src/web/: Small HTTP server and admin web-interface to ejabberd
	(not completed yet)
	* src/ejabberd_sup.erl: Added HTTP processes supervisor

	* src/ejabberd_c2s.erl: Added API to ask presence (thanks to
	Mickael Remond)

	* src/msgs/ru.msg: Updated (thanks to Sergei Golovan)

	* src/mod_muc/mod_muc_room.erl: Updated date parser (thanks to
	Sergei Golovan)

	* src/mod_muc/mod_muc.erl: Added error descriptions (thanks to
	Sergei Golovan)
	* src/mod_muc/mod_muc_room.erl: Likewise

	* src/mod_vcard.erl: Fixed vCard tag (thanks to Sergei Golovan)
	* src/mod_irc/mod_irc.erl: Likewise
	* src/mod_pubsub/mod_pubsub.erl: Likewise

	* src/jlib.hrl: Added macros for errors with <text/> (thanks to
	Sergei Golovan)

2004-02-26  Alexey Shchepin  <alexey@sevcom.net>

	* src/msgs/ru.msg: Updated (thanks to Sergei Golovan)

	* src/mod_muc/mod_muc_room.erl: Updated error codes, removed
	trailing "-" in history. updated subject sending, added <title/>
	in configuration form (thanks to Sergei Golovan)

	* src/mod_irc/mod_irc.erl: Added vCard, ejabberd:configure
	replaced with jabber:iq:register (thanks to Sergei Golovan)

	* src/mod_configure.erl: Updated "xml:lang" usage, updated some
	messages (thanks to Sergei Golovan)
	* src/mod_configure2.erl: Likewise
	* src/mod_disco.erl: Likewise
	* src/mod_register.erl: Likewise
	* src/mod_vcard.erl: Likewise
	* src/mod_irc/mod_irc.erl: Likewise
	* src/mod_muc/mod_muc.erl: Likewise
	* src/mod_muc/mod_muc_room.erl: Likewise
	* src/mod_pubsub/mod_pubsub.erl: Likewise

	* src/jlib.hrl: Added "lang" field in "iq" record (thanks to
	Sergei Golovan)
	* src/jlib.erl: Likewise
