@@ -1,3 +1,7 @@
+2004-03-07  Alexey Shchepin  <alexey@sevcom.net>
+
+	* src/web/ejabberd_http_poll.erl: Completed
+
 2004-03-06  Alexey Shchepin  <alexey@sevcom.net>
 
 	* src/web/: Support for HTTP Polling (JEP-0025) (almost complete)
